Lista compartilhada no portfolio
Adicionei a lista compartilhada na página do portfólio e ajustei a página.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@
     </header>
 
     <main>
-
+        <a href="https://te-solidade.github.io/comprei/">
+        <img src="lista_compartilhada.png" alt="Foto do aplicativo 'Lista Compartilhada'">
+        </a>
     </main>
          <footer class="rodape">
         <p>© 2023 Esther Solidade - Todos os direitos reservados</p>
