Atualizando erro de link da pagina inicial
alterando erro dado por conta da pagina inicial estar com 'main' no link;
ajustes na formatação de algumas páginas.
Ajuste na centralização da foto do aplicativo 'Comprei!'

--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
         <h1>Esther Solidade</h1> 
     
              <nav class = "links"> 
-                <a href="main.html">Início</a>
+                <a href="index.html">Início</a>
                 <a href="portfolio.html">Meu Portfólio</a>
                 <a href="formacao.html">Formação Profissional</a>
                 <a href="contato.html">Entre em contato</a>
@@ -24,7 +24,7 @@
     <form id="meuFormulario" action="" method="get"> <!--Formulário para entrar em contato-->
         
         <div class='campoFormulario'>
-            <h4>Entre em contato</h4>
+            <h2>Entre em contato</h2>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder="Digite seu nome">
         </div>
