--- a/formacao.html
+++ b/formacao.html
@@ -12,7 +12,7 @@
         <h1>Esther Solidade</h1>
     
              <nav class = "links"> 
-                <a href="main.html">Início</a>
+                <a href="index.html">Início</a>
                 <a href="portfolio.html">Meu Portfólio</a>
                 <a href="formacao.html">Formação Profissional</a>
                 <a href="contato.html">Entre em contato</a>
