--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <h1>Esther Solidade</h1>
     
              <nav class = "links"> 
-                <a href="main.html">Início</a>
+                <a href="index.html">Início</a>
                 <a href="portfolio.html">Meu Portfólio</a>
                 <a href="formacao.html">Formação Profissional</a>
                 <a href="contato.html">Entre em contato</a>
@@ -22,9 +22,12 @@
     </header>
 
     <main>
+        <p>O aplicativo "Comprei!" está em produção e está sendo feito para ajudar pessoas que moram juntas a se organizar para as compras semanais/mensais</p>
+        <div class="container">
         <a href="https://te-solidade.github.io/comprei/">
         <img src="lista_compartilhada.png" alt="Foto do aplicativo 'Lista Compartilhada'">
         </a>
+        </div>
     </main>
          <footer class="rodape">
         <p>© 2023 Esther Solidade - Todos os direitos reservados</p>
