--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Esther Solidade</h1>
             <nav class = "links"> 
-                <a href="main.html">Início</a>
+                <a href="index.html">Início</a>
                 <a href="portfolio.html">Meu Portfólio</a>
                 <a href="formacao.html">Formação Profissional</a>
                 <a href="contato.html">Entre em contato</a>
